--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        spring = "2.6.1"
+        spring = "2.5.0"
         boot = "org.springframework.boot"
         lombok = "org.projectlombok:lombok"
     }
@@ -14,7 +14,7 @@ buildscript {
 
 
 plugins {
-    id 'org.springframework.boot' version '2.6.1'
+    id 'org.springframework.boot' version '2.5.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -37,17 +37,17 @@ dependencies {
 
     // SPRING BOOT
     implementation "io.springfox:springfox-boot-starter:3.0.0" //aop, swagger 포함
-    implementation "${boot}:spring-boot-starter-web"
-    implementation "${boot}:spring-boot-starter-mail"
-    implementation "${boot}:spring-boot-starter-data-jpa"
-    implementation "${boot}:spring-boot-starter-oauth2-client"
+    implementation "$boot:spring-boot-starter-web"
+    implementation "$boot:spring-boot-starter-mail"
+    implementation "$boot:spring-boot-starter-data-jpa"
+    implementation "$boot:spring-boot-starter-oauth2-client"
     implementation "$boot:spring-boot-starter-validation"
-    implementation "${boot}:spring-boot-starter-security"
-    testImplementation "${boot}:spring-boot-starter-test"
+    implementation "$boot:spring-boot-starter-security"
+    testImplementation "$boot:spring-boot-starter-test"
     testImplementation 'org.springframework.security:spring-security-test'
 
     // THYMELEAF
-    implementation "${boot}:spring-boot-starter-thymeleaf"
+    implementation "$boot:spring-boot-starter-thymeleaf"
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     // LOMBOK
