--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,6 +14,8 @@ springfox:
         enabled: true
 
 spring:
+  jwt:
+    secret: secret-key
   mail:
     host: smtp.gmail.com
     port: 587
@@ -27,9 +29,9 @@ spring:
             enable: true
   config:
     active:
-      on-profile: dev
+      on-profile: local
   datasource:
-    url: jdbc:postgresql://localhost:15432/inn
+    url: jdbc:postgresql://localhost:25432/dboostudio
     username: dboostudio
     password: eoghks1@!2_
     driver-class-name: org.postgresql.Driver
@@ -37,7 +39,7 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
-    use_sql_comments: true
+#    use_sql_comments: true
   security:
     oauth2:
       client:
@@ -52,28 +54,28 @@ spring:
             scope:
               - profile
               - account_email
-          naver:
-            client-id: <your id>
-            client-secret: <your secret>
-            redirect-uri:  <your url>/login/oauth2/code/naver
-            authorization-grant-type: authorization_code
-            scope:
-              - name
-              - email
-          google:
-            client-id: <your id>
-            client-secret: your secret>
-            scope:
-              - profile
-              - email
+#          naver:
+#            client-id: <your id>
+#            client-secret: <your secret>
+#            redirect-uri:  <your url>/login/oauth2/code/naver
+#            authorization-grant-type: authorization_code
+#            scope:
+#              - name
+#              - email
+#          google:
+#            client-id: <your id>
+#            client-secret: your secret>
+#            scope:
+#              - profile
+#              - email
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
-          naver:
-            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-            token-uri: https://nid.naver.com/oauth2.0/token
-            user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response
+#          naver:
+#            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+#            token-uri: https://nid.naver.com/oauth2.0/token
+#            user-info-uri: https://openapi.naver.com/v1/nid/me
+#            user-name-attribute: response
