--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,10 +1,7 @@
 server:
   port: 8080
 
-# LogBack(Log4j)
-logging:
-  level: ## LOGGING LEVEL : 1) ERROR 2) WARN 3) INFO 4) DEBUG 5) TRACE
-    root: info
+
 
 # swagger enable
 springfox:
@@ -13,9 +10,24 @@ springfox:
       v2:
         enabled: true
 
+# Log4j2
+logging:
+  file:
+    path: logs
+  level: ## LOGGING LEVEL : 1) ERROR 2) WARN 3) INFO 4) DEBUG 5) TRACE
+    root: info
+
+
 spring:
+  config:
+    active:
+      on-profile: local
   jwt:
     secret: secret-key
+  mvc:
+    pathmatch:
+#      강제로 WebMvcRequestHandlerProvider를 소스안에 복사한것을 적용시키기 위한 항목
+      matching-strategy: ant_path_matcher
   mail:
     host: smtp.gmail.com
     port: 587
@@ -27,9 +39,6 @@ spring:
           auth: true
           starttls:
             enable: true
-  config:
-    active:
-      on-profile: local
   datasource:
     url: jdbc:postgresql://localhost:25432/dboostudio
     username: dboostudio
@@ -37,45 +46,46 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-#    use_sql_comments: true
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client-id: <your id>
-            client-secret: <your secret>
-            redirect-uri: <your url>/login/oauth2/code/kakao
-            authorization-grant-type: authorization_code
-            client-authentication-method: POST
-            client-name: Kakao
-            scope:
-              - profile
-              - account_email
-#          naver:
-#            client-id: <your id>
-#            client-secret: <your secret>
-#            redirect-uri:  <your url>/login/oauth2/code/naver
+#
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          kakao:
+#            client-id: 38a973ee4b9c54757def655f283bb991
+##            client-secret: 38a973ee4b9c54757def655f283bb991
+#            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
 #            authorization-grant-type: authorization_code
+#            client-authentication-method: POST
+#            client-name: Kakao
 #            scope:
-#              - name
-#              - email
+#              - profile
+#              - account_email
+##          naver:
+##            client-id: <your id>
+##            client-secret: <your secret>
+##            redirect-uri:  <your url>/login/oauth2/code/naver
+##            authorization-grant-type: authorization_code
+##            scope:
+##              - name
+##              - email
 #          google:
-#            client-id: <your id>
-#            client-secret: your secret>
+#            client-id: 462050063150-c2j3gsm3k5akujs27eh6jec110bi7se1.apps.googleusercontent.com
+#            client-secret: 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
 #            scope:
 #              - profile
 #              - email
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-#          naver:
-#            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-#            token-uri: https://nid.naver.com/oauth2.0/token
-#            user-info-uri: https://openapi.naver.com/v1/nid/me
-#            user-name-attribute: response
+#        provider:
+#          kakao:
+#            authorization-uri: https://kauth.kakao.com/oauth/authorize
+#            token-uri: https://kauth.kakao.com/oauth/token
+#            scope: profile_nickname, profile_image, account_email, gender
+#            user-info-uri: https://kapi.kakao.com/v2/user/me
+#            user-name-attribute: id
+##          naver:
+##            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+##            token-uri: https://nid.naver.com/oauth2.0/token
+##            user-info-uri: https://openapi.naver.com/v1/nid/me
+##            user-name-attribute: response
