--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     implementation "$boot:spring-boot-starter-validation"
     implementation "$boot:spring-boot-starter-security"
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
     // Log4j2
     implementation "$boot:spring-boot-starter-log4j2"
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.16.0'
@@ -77,7 +82,6 @@ dependencies {
 
     // ETC
     implementation 'com.google.code.gson:gson:2.8.5' // JSON
-    implementation 'io.jsonwebtoken:jjwt:0.9.1' // JWT
 }
 
 configurations {
