--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,14 +1,7 @@
-server:
-  port: 8080
-
-
+server.port: 8080
 
 # swagger enable
-springfox:
-  documentation:
-    swagger:
-      v2:
-        enabled: true
+springfox.documentation.swagger.v2.enabled: true
 
 # Log4j2
 logging:
@@ -17,13 +10,8 @@ logging:
   level: ## LOGGING LEVEL : 1) ERROR 2) WARN 3) INFO 4) DEBUG 5) TRACE
     root: info
 
-
 spring:
-  config:
-    active:
-      on-profile: local
-  jwt:
-    secret: secret-key
+#  config.active.on-profile: local
   mvc:
     pathmatch:
 #      강제로 WebMvcRequestHandlerProvider를 소스안에 복사한것을 적용시키기 위한 항목
@@ -48,44 +36,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-#
-#  security:
-#    oauth2:
-#      client:
-#        registration:
-#          kakao:
-#            client-id: 38a973ee4b9c54757def655f283bb991
-##            client-secret: 38a973ee4b9c54757def655f283bb991
-#            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-#            authorization-grant-type: authorization_code
-#            client-authentication-method: POST
-#            client-name: Kakao
-#            scope:
-#              - profile
-#              - account_email
-##          naver:
-##            client-id: <your id>
-##            client-secret: <your secret>
-##            redirect-uri:  <your url>/login/oauth2/code/naver
-##            authorization-grant-type: authorization_code
-##            scope:
-##              - name
-##              - email
-#          google:
-#            client-id: 462050063150-c2j3gsm3k5akujs27eh6jec110bi7se1.apps.googleusercontent.com
-#            client-secret: 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
-#            scope:
-#              - profile
-#              - email
-#        provider:
-#          kakao:
-#            authorization-uri: https://kauth.kakao.com/oauth/authorize
-#            token-uri: https://kauth.kakao.com/oauth/token
-#            scope: profile_nickname, profile_image, account_email, gender
-#            user-info-uri: https://kapi.kakao.com/v2/user/me
-#            user-name-attribute: id
-##          naver:
-##            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-##            token-uri: https://nid.naver.com/oauth2.0/token
-##            user-info-uri: https://openapi.naver.com/v1/nid/me
-##            user-name-attribute: response
+
+# cors 설정
+cors:
+  allowed-origins: http://localhost:${server.port}
+  allowed-methods: GET,POST,PUT,DELETE,OPTIONS
+  allowed-headers: '*'
+  max-age: 3600
+
+# jwt secret key 설정
+jwt.secret: '8sknjlO3NPTBqo319DHLNqsQAfRJEdKsETOds'
+
+# 토큰 관련 secret Key 및 RedirectUri 설정
+app:
+  auth:
+    tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
+    tokenExpiry: 1800000
+    refreshTokenExpiry: 604800000
+  oauth2:
+    authorizedRedirectUris:
+      - http://localhost:${server.port}/oauth/redirect
