--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,8 @@
+# SERVER PORT
 server.port: 8080
 
-# swagger enable
-springfox.documentation.swagger.v2.enabled: true
+# SWAGGER enable
+#springfox.documentation.swagger.v2.enabled: true
 
 # Log4j2
 logging:
@@ -34,12 +35,61 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
+  security:
+    oauth2.client:
+      registration:
+        google:
+          clientId: '462050063150-oa90hktkaq6jhslk77cakibqmbtvo4ng.apps.googleusercontent.com'
+          clientSecret: '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'
+          scope:
+            - email
+            - profile
+        facebook:
+          clientId: '417713543430424'
+          clientSecret: '538863379346a636a3af2aebb53d1c88'
+          scope:
+            - email
+            - public_profile
+        naver:
+          clientId: '45HvVdnTBfqPTdfNkyRs'
+          clientSecret: 'DIV18KipDe'
+          clientAuthenticationMethod: post
+          authorizationGrantType: authorization_code
+          redirectUri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+          scope:
+            - nickname
+            - email
+            - profile_image
+          clientName: Naver
+        kakao:
+          clientId: '38a973ee4b9c54757def655f283bb991'
+          clientSecret: 'Qe3BoUACDA0Z936yK8zMp6r1XwgEi4Yf'
+          clientAuthenticationMethod: post
+          authorizationGrantType: authorization_code
+          redirectUri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+          scope:
+            - profile_nickname
+            - profile_image
+            - account_email
+          clientName: Kakao
+      # Provider 설정
+      provider:
+        naver:
+          authorizationUri: https://nid.naver.com/oauth2.0/authorize
+          tokenUri: https://nid.naver.com/oauth2.0/token
+          userInfoUri: https://openapi.naver.com/v1/nid/me
+          userNameAttribute: response
+        kakao:
+          authorizationUri: https://kauth.kakao.com/oauth/authorize
+          tokenUri: https://kauth.kakao.com/oauth/token
+          userInfoUri: https://kapi.kakao.com/v2/user/me
+          userNameAttribute: id
 
 # cors 설정
 cors:
-  allowed-origins: http://localhost:${server.port}
+  allowed-origins: "http://localhost:${server.port}"
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
   allowed-headers: '*'
   max-age: 3600
@@ -55,4 +105,4 @@ app:
     refreshTokenExpiry: 604800000
   oauth2:
     authorizedRedirectUris:
-      - http://localhost:${server.port}/oauth/redirect
+      - "http://localhost:${server.port}/oauth/redirect"
