oauth2 refactoring 중간 커밋(2)
passwordencoder 빈을 appconfig 안에서 등록하도록 변경, 기존 encoder삭제

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ repositories {
 }
 
 bootJar{
-    mainClass = "studio.dboo.api.ApiApplicationTest"
+    mainClass = "studio.dboo.api.Application"
 }
 
 dependencies {
@@ -81,7 +81,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
 
     // ETC
-    implementation 'com.google.code.gson:gson:2.8.5' // JSON
+    implementation 'com.google.code.gson:gson:2.8.9' // JSON
 }
 
 configurations {
