oauth2 refactoring 중간 커밋(4)
warning유발 코드 정리

--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,11 @@ buildscript {
 plugins {
     id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+    id 'java' version '11'
 }
 
 group = 'studio.dboo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
 
 configurations {
     compileOnly {
