--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 plugins {
     id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java' version '11'
+    id 'java'
 }
 
 group = 'studio.dboo'
